breacking-news section-done

--- a/index.html
+++ b/index.html
@@ -138,18 +138,20 @@
     <!-- =============breaking-news=========== -->
     <section class="py_64 bottom_border">
         <div class="my-container">
-            <h2 class="ff-noto fw-400 text72-xl lh-101">“BREAKING NEWS: Hustlin Hardos set to launch the most
+            <!-- <h2 class="ff-noto fw-400 text72-xl lh-101">“BREAKING NEWS: Hustlin Hardos set to launch the most
                 anticipated NFT project of 2022"
-            </h2>
+            </h2> -->
         </div>
     </section>
     <section class="bottom_border">
         <div class="my-container">
-            <div class="row">
-                <div class="col-6 d-flex flex-column justify-content-center breking_border_left">
+            <div class="row flex-lg-row flex-column-reverse justify-content-center">
+                <div class="col-lg-6 d-flex flex-column justify-content-center breking_border_left">
                     <div class="ml_30 max-w-475">
-                        <p class="ff-noto fw-400 text-16 lh-22 color-black">March 1, 2022 by Editor Hardo</p>
-                        <p class="ff-noto fw-400 text18-sm lh-27 color-black max-w-475">Hustlin' Hardos is a collection
+                        <p class="ff-noto fw-400 text-16 lh-22 color-black mb-lg-3 mb-2">March 1, 2022 by Editor Hardo
+                        </p>
+                        <p class="ff-noto fw-400 text18-sm lh-27 color-black max-w-475 mb-lg-3 mb-0">Hustlin' Hardos is
+                            a collection
                             of
                             9,999 NFT
                             characters on the Ethereum
@@ -167,13 +169,13 @@
                             Boardroom, one of the most rewarding and engaging online communities
                         </p>
                         <div class="blank"><button
-                                class="ff-noto fw-400 text16 lh-22 color-black bg-transparent border_transprant border_bottom">Read
+                                class="ff-noto fw-400 text16 lh-22 color-black bg-transparent border_transprant border_bottom mb-lg-0 mb-3">Read
                                 More...
                             </button></div>
                     </div>
                 </div>
-                <div class="col-6">
-                    <div class=" "><img class="img_border" src="./assets/images/svg/toy.svg" alt="toy"></div>
+                <div class="col-lg-6 justify-content-center d-flex">
+                    <img class="img_border w-100 max_w_570 mb-lg-0 mb-3 breacking_img_bottomborder" src="./assets/images/svg/toy.svg" alt="toy">
                 </div>
             </div>
         </div>
