--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hardos-page</title>
     <link rel="icon" href="./assets/images/svg/hardos-logo.svg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+        integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
+        integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -130,17 +136,18 @@
             </div>
         </div>
         <!-- ==================4=============== -->
-        <!-- <div class="my-container">
-            <h1 class="ff-modern fw-400 text157-3xl lh-188 color-black text-center">THE HUSTLIN’ HARDOS.</h1>
-        </div> -->
+        <div class="my-container">
+            <h1 class="ff-modern fw-400 text157-3xl lh-188 color-black text-nowrap text-center">THE HUSTLIN’ HARDOS.
+            </h1>
+        </div>
         <img class="w-100" src="./assets/images/svg/hero-full-img.svg" alt="hero-full-img">
     </header>
     <!-- =============breaking-news=========== -->
     <section class="py_64 bottom_border">
         <div class="my-container">
-            <!-- <h2 class="ff-noto fw-400 text72-xl lh-101">“BREAKING NEWS: Hustlin Hardos set to launch the most
+            <h2 class="ff-noto fw-400 text72-xl lh-101">“BREAKING NEWS: Hustlin Hardos set to launch the most
                 anticipated NFT project of 2022"
-            </h2> -->
+            </h2>
         </div>
     </section>
     <section class="bottom_border">
@@ -175,19 +182,142 @@
                     </div>
                 </div>
                 <div class="col-lg-6 justify-content-center d-flex">
-                    <img class="img_border w-100 max_w_570 mb-lg-0 mb-3 breacking_img_bottomborder" src="./assets/images/svg/toy.svg" alt="toy">
+                    <img class="img_border w-100 max_w_570 mb-lg-0 mb-3 breacking_img_bottomborder"
+                        src="./assets/images/svg/toy.svg" alt="toy">
                 </div>
             </div>
         </div>
     </section>
     <!-- ================latest-twittes============ -->
-    <section>
+    <section class="py_90 bottom_border">
         <div class="my-container">
-            <h3 class="ff-perpetu ">Latest Tweets</h3>
+            <div class="d-flex justify-content-between">
+                <h3 class="ff-perpetu fw-300 text80-2xl lh-83 color-black">Latest Tweets</h3>
+                <div class="d-md-flex gap-55 d-none">
+                    <img class="prev d-flex cursor_pointer" src=" ./assets/images/svg/tweets_prev.svg" alt="tweets_prev">
+                    <img class="next d-flex cursor_pointer" src="./assets/images/svg/tweet_next.svg" alt="tweet_next">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bottom_border">
+        <div class="my-container">
+            <div class="responsive tweet_border_right tweet_border_left">
+
+                <div class="tweets_box tweet_border_right tweet_border_left">
+                    <div class="max-w-327">
+                        <h3 class=" ff-noto fw-600 text36-lg lh-40 color-black">Etiam eget</h3>
+                        <div class="d-flex align-items-center gap_11 mb-2">
+                            <svg width="22" height="18" viewBox="0 0 22 18" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M22 2.1308C21.1762 2.49822 20.3024 2.7394 19.4076 2.84631C20.3396 2.28394 21.0552 1.39339 21.3922 0.332321C20.5062 0.861633 19.5369 1.23457 18.5261 1.43501C17.7027 0.551907 16.5297 0 15.2315 0C12.7388 0 10.7178 2.03459 10.7178 4.544C10.7178 4.9002 10.7577 5.24696 10.8347 5.57963C7.08348 5.39007 3.7577 3.58104 1.53149 0.831797C1.14305 1.50293 0.920477 2.28359 0.920477 3.11625C0.920477 4.69281 1.71738 6.08361 2.92841 6.89853C2.21164 6.87593 1.51065 6.68103 0.883953 6.3301C0.883695 6.34913 0.883695 6.36817 0.883695 6.38729C0.883695 8.58895 2.43951 10.4256 4.50424 10.843C3.83959 11.025 3.14242 11.0517 2.46598 10.9209C3.0403 12.7262 4.70723 14.0399 6.68224 14.0767C5.13752 15.2954 3.19129 16.0219 1.07671 16.0219C0.712336 16.0219 0.353117 16.0004 0 15.9584C1.99745 17.2477 4.36992 18 6.91883 18C15.221 18 19.7608 11.0758 19.7608 5.07098C19.7608 4.87389 19.7565 4.67793 19.7478 4.48309C20.6314 3.83997 21.3941 3.04342 22 2.1308Z"
+                                    fill="#55ACEE" />
+                            </svg>
+                            <p class="ff-noto fw-400 text14-s lh-19 color-black mb-0">23/02/2022</p>
+                        </div>
+                        <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-327 mb-0">Diam tellus arcu, amet
+                            ornare
+                            nulla
+                            ut
+                            scelerisque
+                            et. Cum porta
+                            ultrices
+                            quam in.</p>
+                        <button
+                            class="ff-noto fw-400 text16 lh-22 color-black bg-transparent border_transprant border_bottom mb-lg-0 mb-3">Read
+                            More...
+                        </button>
+                    </div>
+                </div>
+                <div class="tweets_box tweet_border_right tweet_border_left">
+                    <div class="max-w-327">
+                        <h3 class=" ff-noto fw-600 text36-lg lh-40 color-black">Etiam eget</h3>
+                        <div class="d-flex align-items-center gap_11 mb-2">
+                            <svg width="22" height="18" viewBox="0 0 22 18" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M22 2.1308C21.1762 2.49822 20.3024 2.7394 19.4076 2.84631C20.3396 2.28394 21.0552 1.39339 21.3922 0.332321C20.5062 0.861633 19.5369 1.23457 18.5261 1.43501C17.7027 0.551907 16.5297 0 15.2315 0C12.7388 0 10.7178 2.03459 10.7178 4.544C10.7178 4.9002 10.7577 5.24696 10.8347 5.57963C7.08348 5.39007 3.7577 3.58104 1.53149 0.831797C1.14305 1.50293 0.920477 2.28359 0.920477 3.11625C0.920477 4.69281 1.71738 6.08361 2.92841 6.89853C2.21164 6.87593 1.51065 6.68103 0.883953 6.3301C0.883695 6.34913 0.883695 6.36817 0.883695 6.38729C0.883695 8.58895 2.43951 10.4256 4.50424 10.843C3.83959 11.025 3.14242 11.0517 2.46598 10.9209C3.0403 12.7262 4.70723 14.0399 6.68224 14.0767C5.13752 15.2954 3.19129 16.0219 1.07671 16.0219C0.712336 16.0219 0.353117 16.0004 0 15.9584C1.99745 17.2477 4.36992 18 6.91883 18C15.221 18 19.7608 11.0758 19.7608 5.07098C19.7608 4.87389 19.7565 4.67793 19.7478 4.48309C20.6314 3.83997 21.3941 3.04342 22 2.1308Z"
+                                    fill="#55ACEE" />
+                            </svg>
+                            <p class="ff-noto fw-400 text14-s lh-19 color-black mb-0">23/02/2022</p>
+                        </div>
+                        <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-327 mb-0">Diam tellus arcu, amet
+                            ornare
+                            nulla
+                            ut
+                            scelerisque
+                            et. Cum porta
+                            ultrices
+                            quam in.</p>
+                        <button
+                            class="ff-noto fw-400 text16 lh-22 color-black bg-transparent border_transprant border_bottom mb-lg-0 mb-3">Read
+                            More...
+                        </button>
+                    </div>
+                </div>
+                <div class="tweets_box tweet_border_right tweet_border_left">
+                    <div class="max-w-327">
+                        <h3 class=" ff-noto fw-600 text36-lg lh-40 color-black">Etiam eget</h3>
+                        <div class="d-flex align-items-center gap_11 mb-2">
+                            <svg width="22" height="18" viewBox="0 0 22 18" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M22 2.1308C21.1762 2.49822 20.3024 2.7394 19.4076 2.84631C20.3396 2.28394 21.0552 1.39339 21.3922 0.332321C20.5062 0.861633 19.5369 1.23457 18.5261 1.43501C17.7027 0.551907 16.5297 0 15.2315 0C12.7388 0 10.7178 2.03459 10.7178 4.544C10.7178 4.9002 10.7577 5.24696 10.8347 5.57963C7.08348 5.39007 3.7577 3.58104 1.53149 0.831797C1.14305 1.50293 0.920477 2.28359 0.920477 3.11625C0.920477 4.69281 1.71738 6.08361 2.92841 6.89853C2.21164 6.87593 1.51065 6.68103 0.883953 6.3301C0.883695 6.34913 0.883695 6.36817 0.883695 6.38729C0.883695 8.58895 2.43951 10.4256 4.50424 10.843C3.83959 11.025 3.14242 11.0517 2.46598 10.9209C3.0403 12.7262 4.70723 14.0399 6.68224 14.0767C5.13752 15.2954 3.19129 16.0219 1.07671 16.0219C0.712336 16.0219 0.353117 16.0004 0 15.9584C1.99745 17.2477 4.36992 18 6.91883 18C15.221 18 19.7608 11.0758 19.7608 5.07098C19.7608 4.87389 19.7565 4.67793 19.7478 4.48309C20.6314 3.83997 21.3941 3.04342 22 2.1308Z"
+                                    fill="#55ACEE" />
+                            </svg>
+                            <p class="ff-noto fw-400 text14-s lh-19 color-black mb-0">23/02/2022</p>
+                        </div>
+                        <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-327 mb-0">Diam tellus arcu, amet
+                            ornare
+                            nulla
+                            ut
+                            scelerisque
+                            et. Cum porta
+                            ultrices
+                            quam in.</p>
+                        <button
+                            class="ff-noto fw-400 text16 lh-22 color-black bg-transparent border_transprant border_bottom mb-lg-0 mb-3">Read
+                            More...
+                        </button>
+                    </div>
+                </div>
+                <div class="tweets_box tweet_border_right tweet_border_left">
+                    <div class="max-w-327">
+                        <h3 class=" ff-noto fw-600 text36-lg lh-40 color-black">Etiam eget</h3>
+                        <div class="d-flex align-items-center gap_11 mb-2">
+                            <svg width="22" height="18" viewBox="0 0 22 18" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M22 2.1308C21.1762 2.49822 20.3024 2.7394 19.4076 2.84631C20.3396 2.28394 21.0552 1.39339 21.3922 0.332321C20.5062 0.861633 19.5369 1.23457 18.5261 1.43501C17.7027 0.551907 16.5297 0 15.2315 0C12.7388 0 10.7178 2.03459 10.7178 4.544C10.7178 4.9002 10.7577 5.24696 10.8347 5.57963C7.08348 5.39007 3.7577 3.58104 1.53149 0.831797C1.14305 1.50293 0.920477 2.28359 0.920477 3.11625C0.920477 4.69281 1.71738 6.08361 2.92841 6.89853C2.21164 6.87593 1.51065 6.68103 0.883953 6.3301C0.883695 6.34913 0.883695 6.36817 0.883695 6.38729C0.883695 8.58895 2.43951 10.4256 4.50424 10.843C3.83959 11.025 3.14242 11.0517 2.46598 10.9209C3.0403 12.7262 4.70723 14.0399 6.68224 14.0767C5.13752 15.2954 3.19129 16.0219 1.07671 16.0219C0.712336 16.0219 0.353117 16.0004 0 15.9584C1.99745 17.2477 4.36992 18 6.91883 18C15.221 18 19.7608 11.0758 19.7608 5.07098C19.7608 4.87389 19.7565 4.67793 19.7478 4.48309C20.6314 3.83997 21.3941 3.04342 22 2.1308Z"
+                                    fill="#55ACEE" />
+                            </svg>
+                            <p class="ff-noto fw-400 text14-s lh-19 color-black mb-0">23/02/2022</p>
+                        </div>
+                        <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-327 mb-0">Diam tellus arcu, amet
+                            ornare
+                            nulla
+                            ut
+                            scelerisque
+                            et. Cum porta
+                            ultrices
+                            quam in.</p>
+                        <button
+                            class="ff-noto fw-400 text16 lh-22 color-black bg-transparent border_transprant border_bottom mb-lg-0 mb-3">Read
+                            More...
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
+        integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
