minting-section done

--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
             <div class="d-flex justify-content-between">
                 <h3 class="ff-perpetu fw-300 text80-2xl lh-83 color-black">Latest Tweets</h3>
                 <div class="d-md-flex gap-55 d-none">
-                    <img class="prev d-flex cursor_pointer" src=" ./assets/images/svg/tweets_prev.svg" alt="tweets_prev">
+                    <img class="prev d-flex cursor_pointer" src=" ./assets/images/svg/tweets_prev.svg"
+                        alt="tweets_prev">
                     <img class="next d-flex cursor_pointer" src="./assets/images/svg/tweet_next.svg" alt="tweet_next">
                 </div>
             </div>
@@ -310,6 +311,58 @@
             </div>
         </div>
     </section>
+    <!-- ===============Minting============= -->
+    <section class="py_90 bottom_border">
+        <div class="my-container">
+            <h2 class="ff-noto fw-400 text80-2xl lh-83 color-black">Minting</h2>
+        </div>
+    </section>
+    <section class="bottom_border">
+        <div class="my-container">
+            <div class="row flex-lg-row flex-column-reverse">
+                <div class="col-lg-6 d-flex flex-column justify-content-center breking_border_left">
+                    <div class="ml_30">
+                        <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-438">Most of the Hustlin’ Hardos
+                            first
+                            experienced
+                            NFTs via other
+                            successful projects like NBA TopShot, where revealing your
+                            newly minted item invoked the same emotions as opening up that first pack of baseball cards.
+                            NFTs have allowed us to
+                            enjoy those feelings once again while also empowering communities through shared ownership.
+                            The
+                            space has seen
+                            incredible growth over the past year, and it is our belief that we are in the very early
+                            innings
+                            of the paradigm shift
+                            that will be powered by web3.</p>
+                        <div class="blank">
+                            <button class="d-flex bg-transparent btn_border mb_35">
+                                <p class="ff-noto fw-600 text36-lg lh-39 color-black ps-4 pe-4 mb-0 btn_border_right">-
+                                </p>
+                                <p class="ff-noto fw-600 text36-lg lh-39 color-black ps-4 pe-4 mb-0 btn_border_right">
+                                    100
+                                </p>
+                                <p class="ff-noto fw-600 text36-lg lh-39 color-black ps-4 pe-4 mb-0">+</p>
+                            </button>
+                        </div>
+                        <div class="black">
+                            <button class="ff-noto fw-600 text14-s lh-19 color-black mint_btn btn_border mb_35">Mint
+                                NOW</button>
+                        </div>
+                        <p class="ff-noto fw-600 text18-sm lh-25 color-green mb-0">Time Left</p>
+                        <p class="ff-noto fw-600 text36-lg lh-49 color-red">40:15:12:10</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 justify-content-center d-flex">
+                    <img class="img_border w-100 max_w_570 mb-lg-0 mb-3 breacking_img_bottomborder"
+                        src="./assets/images/svg/toy.svg" alt="toy">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ===========Etiam eget=============== -->
+ 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
