Etiam eget section done

--- a/index.html
+++ b/index.html
@@ -362,7 +362,29 @@
         </div>
     </section>
     <!-- ===========Etiam eget=============== -->
- 
+    <section class="bottom_border pt-4 pb-4">
+        <div class="my-container">
+            <div class="d-flex gap-116 flex-wrap justify-content-center">
+                <div class="max-w-121">
+                    <h4 class="ff-noto fw-400 text24-md lh-27 color-black">Etiam eget</h4>
+                    <p class="ff-noto fw-600 text36-lg lh-40 color-black mb-0">42</p>
+                </div>
+                <div class="max-w-121">
+                    <h4 class="ff-noto fw-400 text24-md lh-27 color-black">Tristique.</h4>
+                    <p class="ff-noto fw-600 text36-lg lh-40 color-black mb-0">42</p>
+                </div>
+                <div class="max-w-121">
+                    <h4 class="ff-noto fw-400 text24-md lh-27 color-black">Aliquet ac.</h4>
+                    <p class="ff-noto fw-600 text36-lg lh-40 color-black mb-0">42</p>
+                </div>
+                <div class="max-w-121">
+                    <h4 class="ff-noto fw-400 text24-md lh-27 color-black">Tincidunt.</h4>
+                    <p class="ff-noto fw-600 text36-lg lh-40 color-black mb-0">42</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
