--- a/index.html
+++ b/index.html
@@ -391,85 +391,106 @@
             <h2 class="ff-noto fw-400 text80-2xl lh-83 color-black">RoadMap</h2>
         </div>
     </section>
-    <section>
-        <!-- <div class="my-container"> -->
+    <section class="py_90">
         <div class="timeline">
-            <div class="container left">
-                <div class="content">
-                    <h2>2017</h2>
-                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum,
-                        vim ea mazim
-                        fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
-                        iusto primis ea
-                        eam.</p>
-                </div>
-            </div>
             <div class="container right">
                 <div class="content">
-                    <h2>2016</h2>
-                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum,
-                        vim ea mazim
-                        fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
-                        iusto primis ea
-                        eam.</p>
+                    <p class="ff-noto fw-400 text14-s lh-19 color-black mb-lg-1 mb-0">Phase 1</p>
+                    <h5 class="ff-noto fw-600 text36-lg lh-40 color-black">Community Building</h5>
+                    <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-495">The concept of Hustlin’ Hardos was
+                        born a few short weeks ago
+                        and we’re currently focused on the
+                        most important aspect
+                        of the project - COMMUNITY. We are organizing giveaways and events to spread the word around
+                        what will be one of the
+                        most exciting NFT projects so far. We also aim to reward those driving early engagement for the
+                        project in the form of
+                        white-list and pre-sale access to the official Hustlin’ Hardo drop. Join us on our Discord
+                        channel to see what we are
+                        all about!</p>
                 </div>
             </div>
             <div class="container left">
                 <div class="content">
-                    <h2>2015</h2>
-                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum,
-                        vim ea mazim
-                        fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
-                        iusto primis ea
-                        eam.</p>
+                    <p class="ff-noto fw-400 text14-s lh-19 color-black mb-lg-1 mb-0">Phase 2</p>
+                    <h5 class="ff-noto fw-600 text36-lg lh-40 color-black">Minting Event</h5>
+                    <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-460">Hustlin’ Hardos can be minted and
+                        are revealed to the world. There will only ever be 9,999 Hustlin’ Hardos, so this is
+                        your chance to get your hands on this unique collectible item, which will become an integral
+                        part of your online
+                        identity</p>
                 </div>
             </div>
             <div class="container right">
                 <div class="content">
-                    <h2>2012</h2>
-                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum,
-                        vim ea mazim
-                        fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
-                        iusto primis ea
-                        eam.</p>
+                    <p class="ff-noto fw-400 text14-s lh-19 color-black mb-lg-1 mb-0">Phase 3</p>
+                    <h5 class="ff-noto fw-600 text36-lg lh-40 color-black">Real-life Raffles</h5>
+                    <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-495">We will be raffling real-life
+                        versions of some of the luxury items worn by Hustlin’ Hardos. For example, one week after
+                        the minting event is sold out, we will raffle a Rolex GMT “Batman” among the lucky holders of
+                        Hustlin' Hardos wearing
+                        that specific watch - so be on the lookout for characters who hold items you would like to own.
+                        Each month, we will
+                        announce another similar raffle, where Hustlin’ Hardos will get the chance to win items worn by
+                        their favorite NFTs</p>
                 </div>
             </div>
             <div class="container left">
                 <div class="content">
-                    <h2>2011</h2>
-                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum,
-                        vim ea mazim
-                        fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
-                        iusto primis ea
-                        eam.</p>
+                    <p class="ff-noto fw-400 text14-s lh-19 color-black mb-lg-1 mb-0">Phase 4</p>
+                    <h5 class="ff-noto fw-600 text36-lg lh-40 color-black">No-Loss Gambling</h5>
+                    <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-460">Each week, we will organize free to
+                        enter no-loss gambling, with 25% of royalties being distributed as prize pool in
+                        events such as marble races or blackjack/poker tournaments. Imagine being able to bet on your
+                        Hustlin’ Hardo in a
+                        virtual foot race against your friend’s hardos. Since those events are free to enter, you can’t
+                        lose anything - but you
+                        can win BIG!</p>
                 </div>
             </div>
             <div class="container right">
                 <div class="content">
-                    <h2>2007</h2>
-                    <p>Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum perfecto mnesarchum,
-                        vim ea mazim
-                        fierent detracto. Ea quis iuvaret expetendis his, te elit voluptua dignissim per, habeo
-                        iusto primis ea
-                        eam.</p>
+                    <p class="ff-noto fw-400 text14-s lh-19 color-black mb-lg-1 mb-0">Phase 5</p>
+                    <h5 class="ff-noto fw-600 text36-lg lh-40 color-black">Hustlin’ Hardettes</h5>
+                    <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-495">The ethos of Hustlin’ Hardos is to
+                        create an authentic and inclusive community where we would celebrate the quirky
+                        nature of the finance world. With that objective in mind, we will also launch a brand now
+                        collection to celebrate the
+                        Hardettes who are an integral part of this community.</p>
                 </div>
             </div>
+            <div class="container left">
+                <div class="content">
+                    <p class="ff-noto fw-400 text14-s lh-19 color-black mb-lg-1 mb-0">Phase 6</p>
+                    <h5 class="ff-noto fw-600 text36-lg lh-40 color-black">Metaverse Integrations</h5>
+                    <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-460">Both our personal and professional
+                        lives are increasingly moving online. Your Huslin’ Hardo will become your gateway to
+                        this new reality, acting as your 3D avatar in the metaverse</p>
+                </div>
+            </div>
+            <div class="container right">
+                <div class="content">
+                    <p class="ff-noto fw-400 text14-s lh-19 color-black mb-lg-1 mb-0">Phase 7</p>
+                    <h5 class="ff-noto fw-600 text36-lg lh-40 color-black">Future Developments</h5>
+                    <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-495">It wouldn’t make sense to build one
+                        of the best online communities and not actively listen to its suggestions. As such,
+                        we also plan to execute against some community-generated ideas, delivering against the
+                        priorities of those who made
+                        Hustlin’ Hardos a success</p>
+                </div>
+            </div>
+            <div class="container left">
+                <div class="content">
+                    <p class="ff-noto fw-400 text14-s lh-19 color-black mb-lg-1 mb-0">Phase 8</p>
+                    <h5 class="ff-noto fw-600 text36-lg lh-40 color-black">Swapping Individual Attributes</h5>
+                    <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-460">Building a wardrobe app where you
+                        can secondary sales</p>
+                </div>
+            </div>
+            <i class="arrow"></i>
         </div>
-        <!-- </div> -->
     </section>
-    <section>
-        <div class="my-container">
-            <h1 class="text157-3xl color-red">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
-                inventore veniam reprehenderit, sequi ratione deserunt aperiam excepturi dolorum fuga nesciunt commodi
-                laboriosam rem a repellat illum obcaecati aliquam nemo mollitia! Eos necessitatibus magni modi. Earum
-                rerum libero voluptatem et quidem aliquid eligendi architecto nostrum ea cumque, illo, neque beatae
-                ducimus tenetur in laudantium optio laboriosam praesentium error sint ullam molestiae officiis iure
-                doloremque! In quia officia cumque repudiandae totam vel, labore minus necessitatibus odit itaque alias
-                illo molestias, sed quas eveniet ut mollitia? Sit, fuga. Accusantium, maxime optio. Tempore, inventore
-                quas! Animi illum odio minus, labore sunt pariatur libero dolor.</h1>
-        </div>
-    </section>
-    <p>last para</p>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
