--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
             <h2 class="ff-noto fw-400 text80-2xl lh-83 color-black">RoadMap</h2>
         </div>
     </section>
-    <section class="py_90">
+    <section class="py_90 bottom_border">
         <div class="timeline">
             <div class="container right">
                 <div class="content">
@@ -489,6 +489,176 @@
             </div>
             <i class="arrow"></i>
         </div>
+    </section>
+    <!-- ==============FAQ-ACCORDION============= -->
+    <section class="py_90 bottom_border">
+        <div class="my-container">
+            <h2 class="ff-noto fw-400 text80-2xl lh-83 color-black">FAQs</h2>
+        </div>
+    </section>
+    <section class="bottom_border">
+        <div class="my-container">
+            <div class="accordion accordion_border_left accordion_border_right" id="accordionExample">
+                <div class="accordion-item bottom_border">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button ff-noto fw-600 text24-md lh-33 color-black " type="button"
+                            data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true"
+                            aria-controls="collapseOne">
+                            What is an NFT?
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body ff-noto fw-400 text16-ss lh-24 color-black">
+                            NFT stands for “Non-fungible token,” which means that it’s a unique, digital item with
+                            blockchain-managed ownership that
+                            users can buy, own, and trade. Some NFT’s fundamental function is to be digital art. But
+                            they can also offer additional
+                            benefits like exclusive access to websites, event tickets, game items, and ownership records
+                            for physical objects. Think
+                            of it as a unique piece of art that can also work as a “members-only” card. Hustlin' Hardos
+                            works like this
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item bottom_border">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed ff-noto fw-600 text24-md lh-33 color-black"
+                            type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+                            aria-controls="collapseTwo">
+                            How do I get an NFT?
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body ff-noto fw-400 text16-ss lh-24 color-black">
+                            NFT stands for “Non-fungible token,” which means that it’s a unique, digital item with
+                            blockchain-managed ownership that
+                            users can buy, own, and trade. Some NFT’s fundamental function is to be digital art. But
+                            they can also offer additional
+                            benefits like exclusive access to websites, event tickets, game items, and ownership records
+                            for physical objects. Think
+                            of it as a unique piece of art that can also work as a “members-only” card. Hustlin' Hardos
+                            works like this
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item bottom_border">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed ff-noto fw-600 text24-md lh-33 color-black"
+                            type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                            aria-expanded="false" aria-controls="collapseThree">
+                            How much is a Hustlin' Hardo NFT?
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body ff-noto fw-400 text16-ss lh-24 color-black">
+                            NFT stands for “Non-fungible token,” which means that it’s a unique, digital item with
+                            blockchain-managed ownership that
+                            users can buy, own, and trade. Some NFT’s fundamental function is to be digital art. But
+                            they can also offer additional
+                            benefits like exclusive access to websites, event tickets, game items, and ownership records
+                            for physical objects. Think
+                            of it as a unique piece of art that can also work as a “members-only” card. Hustlin' Hardos
+                            works like this
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item bottom_border">
+                    <h2 class="accordion-header" id="headingfoure">
+                        <button class="accordion-button collapsed ff-noto fw-600 text24-md lh-33 color-black"
+                            type="button" data-bs-toggle="collapse" data-bs-target="#collapsefoure"
+                            aria-expanded="false" aria-controls="collapsefoure">
+                            How much is a Hustlin' Hardo NFT?
+                        </button>
+                    </h2>
+                    <div id="collapsefoure" class="accordion-collapse collapse" aria-labelledby="headingfocollapsefoure"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body ff-noto fw-400 text16-ss lh-24 color-black">
+                            NFT stands for “Non-fungible token,” which means that it’s a unique, digital item with
+                            blockchain-managed ownership that
+                            users can buy, own, and trade. Some NFT’s fundamental function is to be digital art. But
+                            they can also offer additional
+                            benefits like exclusive access to websites, event tickets, game items, and ownership records
+                            for physical objects. Think
+                            of it as a unique piece of art that can also work as a “members-only” card. Hustlin' Hardos
+                            works like this
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item bottom_border">
+                    <h2 class="accordion-header" id="headingfive">
+                        <button class="accordion-button collapsed ff-noto fw-600 text24-md lh-33 color-black"
+                            type="button" data-bs-toggle="collapse" data-bs-target="#collapsefive" aria-expanded="false"
+                            aria-controls="collapsefive">
+                            How much is a Hustlin' Hardo NFT?
+                        </button>
+                    </h2>
+                    <div id="collapsefive" class="accordion-collapse collapse" aria-labelledby="headingfive"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body ff-noto fw-400 text16-ss lh-24 color-black">
+                            NFT stands for “Non-fungible token,” which means that it’s a unique, digital item with
+                            blockchain-managed ownership that
+                            users can buy, own, and trade. Some NFT’s fundamental function is to be digital art. But
+                            they can also offer additional
+                            benefits like exclusive access to websites, event tickets, game items, and ownership records
+                            for physical objects. Think
+                            of it as a unique piece of art that can also work as a “members-only” card. Hustlin' Hardos
+                            works like this
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item bottom_border">
+                    <h2 class="accordion-header" id="headingsix">
+                        <button class="accordion-button collapsed ff-noto fw-600 text24-md lh-33 color-black"
+                            type="button" data-bs-toggle="collapse" data-bs-target="#collapsesix" aria-expanded="false"
+                            aria-controls="collapsesix">
+                            How much is a Hustlin' Hardo NFT?
+                        </button>
+                    </h2>
+                    <div id="collapsesix" class="accordion-collapse collapse" aria-labelledby="headingsix"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body ff-noto fw-400 text16-ss lh-24 color-black">
+                            NFT stands for “Non-fungible token,” which means that it’s a unique, digital item with
+                            blockchain-managed ownership that
+                            users can buy, own, and trade. Some NFT’s fundamental function is to be digital art. But
+                            they can also offer additional
+                            benefits like exclusive access to websites, event tickets, game items, and ownership records
+                            for physical objects. Think
+                            of it as a unique piece of art that can also work as a “members-only” card. Hustlin' Hardos
+                            works like this
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingseven">
+                        <button class="accordion-button collapsed ff-noto fw-600 text24-md lh-33 color-black"
+                            type="button" data-bs-toggle="collapse" data-bs-target="#collapseseven"
+                            aria-expanded="false" aria-controls="collapseseven">
+                            How much is a Hustlin' Hardo NFT?
+                        </button>
+                    </h2>
+                    <div id="collapseseven" class="accordion-collapse collapse" aria-labelledby="headingseven"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body ff-noto fw-400 text16-ss lh-24 color-black">
+                            NFT stands for “Non-fungible token,” which means that it’s a unique, digital item with
+                            blockchain-managed ownership that
+                            users can buy, own, and trade. Some NFT’s fundamental function is to be digital art. But
+                            they can also offer additional
+                            benefits like exclusive access to websites, event tickets, game items, and ownership records
+                            for physical objects. Think
+                            of it as a unique piece of art that can also work as a “members-only” card. Hustlin' Hardos
+                            works like this
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =============last=========== -->
+    <section class="py_32">
+        <h6 class="ff-noto fw-400 text16-ss lh-22 color-black text-center mb-0">© Hustlin' Hardos 2022</h6>
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
