team section done

--- a/index.html
+++ b/index.html
@@ -490,6 +490,71 @@
             <i class="arrow"></i>
         </div>
     </section>
+    <!-- =============team============ -->
+    <section class="py_90 bottom_border">
+        <div class="my-container">
+            <div class="d-flex justify-content-between">
+                <h3 class="ff-noto fw-400 text80-2xl lh-83 color-black">Team</h3>
+                <div class="d-md-flex gap-55 d-none">
+                    <img class="prev2 d-flex cursor_pointer" src=" ./assets/images/svg/tweets_prev.svg"
+                        alt="tweets_prev">
+                    <img class="next2 d-flex cursor_pointer" src="./assets/images/svg/tweet_next.svg" alt="tweet_next">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bottom_border">
+        <div class="my-container">
+            <div class="team-slider team_right_border team_border_left">
+                <div class="team_box padding_team1 team_border_right">
+                    <div class="d-flex align-items-center justify-content-center flex-column">
+                        <img class="mb-3" src="./assets/images/svg/toy-slider.svg" alt="toy-slider">
+                        <h5 class="ff-noto fw-900 text36-lg lh-49 color-brown mb-md-3 mb-0 text-nowrap">Executive Hardo
+                        </h5>
+                        <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-407 text-center mb-0">Crypto startup
+                            executive,
+                            former VC Investor (US$ 1B+ AuM), former MBB Consultant,</p>
+                    </div>
+                </div>
+                <div class="team_box padding_team2 team_border_right">
+                    <div class="d-flex align-items-center justify-content-center flex-column">
+                        <img class="mb-3" src="./assets/images/svg/toy-slider2.svg" alt="toy-slider2">
+                        <h5 class="ff-noto fw-900 text36-lg lh-49 color-brown mb-md-3 mb-0 text-nowrap">Johnny Banjo
+                        </h5>
+                        <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-407 text-center mb-0">The Hustlin’
+                            Hardos
+                            have arrived to the metaverse! 9,999 Hardos have taken over. Lorem Ipsum is simply dummy
+                            text of
+                            the
+                            printing industry.</p>
+                    </div>
+                </div>
+                <div class="team_box padding_team1 team_border_right">
+                    <div class="d-flex align-items-center justify-content-center flex-column">
+                        <img class="mb-3" src="./assets/images/svg/toy-slider.svg" alt="toy-slider">
+                        <h5 class="ff-noto fw-900 text36-lg lh-49 color-brown mb-md-3 mb-0 text-nowrap">Executive Hardo
+                        </h5>
+                        <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-407 text-center mb-0">Crypto startup
+                            executive,
+                            former VC Investor (US$ 1B+ AuM), former MBB Consultant,</p>
+                    </div>
+                </div>
+                <div class="team_box padding_team2 team_border_right">
+                    <div class="d-flex align-items-center justify-content-center flex-column">
+                        <img class="mb-3" src="./assets/images/svg/toy-slider2.svg" alt="toy-slider2">
+                        <h5 class="ff-noto fw-900 text36-lg lh-49 color-brown mb-md-3 mb-0 text-nowrap">Johnny Banjo
+                        </h5>
+                        <p class="ff-noto fw-400 text16-ss lh-22 color-black max-w-407 text-center mb-0">The Hustlin’
+                            Hardos
+                            have arrived to the metaverse! 9,999 Hardos have taken over. Lorem Ipsum is simply dummy
+                            text of
+                            the
+                            printing industry.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- ==============FAQ-ACCORDION============= -->
     <section class="py_90 bottom_border">
         <div class="my-container">
