--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body class="body_bg_img">
     <header>
-        <!--===============1============== -->
+        <!--===============overflow-section============== -->
         <div class="bg-img-black overflow-x-scroll py_14">
             <div class="d-flex justify-content-between gap_62">
                 <div class="d-flex  gap-7 align-items-center ml_-20">
@@ -53,11 +53,11 @@
                 </div>
                 <div class="d-flex gap-7 align-items-center mr_-20">
                     <p class="ff-noto fw-400 text16-ss lh-22 color-white mb-0 text-nowrap">euro/doller</p>
-                    <button class="ff-noto fw-400 text14-s lh-19 color-yellow style_btn_yellow ">+0.03%</button>
+                    <button class="ff-noto fw-400 text14-s lh-19 color-yellow style_btn_yellow">+0.03%</button>
                 </div>
             </div>
         </div>
-        <!-- ==============2============= -->
+        <!-- ==============hustlin-hardoos-icons============= -->
         <div class="py_15_22">
             <div class="my-container">
                 <div class="d-flex flex_wrap gap_178 justify_content_end align-items-center">
@@ -112,20 +112,28 @@
                 </div>
             </div>
         </div>
-        <!-- ================3============= -->
+        <!-- ================nav-links============= -->
         <div class="border_top_bottom">
             <div class="my-container">
                 <div class="d-flex flex-wrap justify-content-center align-items-center menulist">
                     <div class="border_right_left">
-                        <p class="ff-noto fw-400 text16-ss lh-22 color-black px-24 mb-0">About us</p>
+                        <li class="px-24"><a href="#about"
+                                class="ff-noto fw-400 text16-ss lh-22 color-black mb-0 link">About us</a>
+                            </li>
                     </div>
-                    <p class="ff-noto fw-400 text16-ss lh-22 color-black px-24 mb-0 py_19">Minting</p>
+                    <li class="px-24"><a href="#minting"
+                            class="ff-noto fw-400 text16-ss lh-22 color-black mb-0">Minting</a></li>
                     <div class="border_right_left">
-                        <p class="ff-noto fw-400 text16-ss lh-22 color-black px-24 mb-0">Roadmap</p>
+                        <li class="px-24"><a href="#roadmap"
+                                class="ff-noto fw-400 text16-ss lh-22 color-black mb-0">Roadmap</a>
+                        </li>
                     </div>
-                    <p class="ff-noto fw-400 text16-ss lh-22 color-black px-24 mb-0">Team</p>
+                    <li class="px-24"><a href="#team" class="ff-noto fw-400 text16-ss lh-22 color-black mb-0">Team</a>
+                    </li>
                     <div class="border_right_left">
-                        <p class="ff-noto fw-400 text16-ss lh-22 color-black px-24 mb-0">FAQs</p>
+                        <li class="px-24"><a href="#faq"
+                                class="ff-noto fw-400 text16-ss lh-22 color-black mb-0">FAQs</a>
+                        </li>
                     </div>
                 </div>
                 <div class="menuIcon">
@@ -135,7 +143,7 @@
                 </div>
             </div>
         </div>
-        <!-- ==================4=============== -->
+        <!-- ==================heading=============== -->
         <div class="my-container">
             <h1 class="ff-modern fw-400 text157-3xl lh-188 color-black text-nowrap text-center">THE HUSTLIN’ HARDOS.
             </h1>
@@ -143,7 +151,7 @@
         <img class="w-100" src="./assets/images/svg/hero-full-img.svg" alt="hero-full-img">
     </header>
     <!-- =============breaking-news=========== -->
-    <section class="py_64 bottom_border">
+    <section id="about" class="py_64 bottom_border">
         <div class="my-container">
             <h2 class="ff-noto fw-400 text72-xl lh-101">“BREAKING NEWS: Hustlin Hardos set to launch the most
                 anticipated NFT project of 2022"
@@ -312,7 +320,7 @@
         </div>
     </section>
     <!-- ===============Minting============= -->
-    <section class="py_90 bottom_border">
+    <section id="minting" class="py_90 bottom_border">
         <div class="my-container">
             <h2 class="ff-noto fw-400 text80-2xl lh-83 color-black">Minting</h2>
         </div>
@@ -386,7 +394,7 @@
         </div>
     </section>
     <!--==============roadmap===============-->
-    <section class="py_90 bottom_border">
+    <section id="roadmap" class="py_90 bottom_border">
         <div class="my-container">
             <h2 class="ff-noto fw-400 text80-2xl lh-83 color-black">RoadMap</h2>
         </div>
@@ -491,7 +499,7 @@
         </div>
     </section>
     <!-- =============team============ -->
-    <section class="py_90 bottom_border">
+    <section id="team" class="py_90 bottom_border">
         <div class="my-container">
             <div class="d-flex justify-content-between">
                 <h3 class="ff-noto fw-400 text80-2xl lh-83 color-black">Team</h3>
@@ -556,7 +564,7 @@
         </div>
     </section>
     <!-- ==============FAQ-ACCORDION============= -->
-    <section class="py_90 bottom_border">
+    <section id="faq" class="py_90 bottom_border">
         <div class="my-container">
             <h2 class="ff-noto fw-400 text80-2xl lh-83 color-black">FAQs</h2>
         </div>
