--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="d-flex flex-wrap justify-content-center align-items-center menulist">
                     <div class="border_right_left">
                         <li class="px-24"><a href="#about"
-                                class="ff-noto fw-400 text16-ss lh-22 color-black mb-0 link">About us</a>
+                                class="ff-noto fw-400 text16-ss lh-22 color-black mb-0 link nav_link">About us</a>
                             </li>
                     </div>
                     <li class="px-24"><a href="#minting"
