--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 
 <body class="body_bg_img">
     <header>
+        <div id="preload"
+            class=" h-100 min-vh-100 w-100 d-flex align-items-center justify-content-center bg-black z-2 position-fixed start-0 top-0">
+            <div class="d-flex flex-column justify-content-center align-items-center">
+                <img class="mb-3" src="./assets/images/svg/hardos-logo.svg" alt="hardos-logo" class="w-100 max-w-130">
+                <div class="text-uppercase ff-modern fw-400 text24-md lh-29 color-white mb-0 text-nowrap">
+                    hustlin-hardoos
+                </div>
+            </div>
+        </div>
         <!--===============overflow-section============== -->
         <div class="bg-img-black overflow-x-scroll py_14">
             <div class="d-flex justify-content-between gap_62">
@@ -119,7 +128,7 @@
                     <div class="border_right_left">
                         <li class="px-24"><a href="#about"
                                 class="ff-noto fw-400 text16-ss lh-22 color-black mb-0 link nav_link">About us</a>
-                            </li>
+                        </li>
                     </div>
                     <li class="px-24"><a href="#minting"
                             class="ff-noto fw-400 text16-ss lh-22 color-black mb-0">Minting</a></li>
