apply button border in minting section

--- a/index.html
+++ b/index.html
@@ -348,16 +348,16 @@
                             of the paradigm shift
                             that will be powered by web3.</h3>
                         <div class="blank">
-                            <div class="d-flex bg-transparent btn_border mb_35">
-                                <button id="minusBtn"
-                                    class="ff-noto fw-600 text36-lg lh-39 color-black ps-4 pe-4 mb-0 btn_border_right">-
-                                </button>
-                                <button id="count"
-                                    class="ff-noto fw-600 text36-lg lh-39 color-black ps-4 pe-4 mb-0 btn_border_right">
+                            <div class="d-flex btn_border mb_35 max-w-238">
+                                <p id="minusBtn"
+                                    class="ff-noto fw-600 text36-lg lh-39 color-black ps-4 pe-4 mb-0 btn_border_right bg-transparent cursor-pointer">-
+                                </p>
+                                <p id="count"
+                                    class="ff-noto fw-600 text36-lg lh-39 color-black ps-4 pe-4 mb-0 btn_border_right bg-transparent cursor-pointer">
                                     100
-                                </button>
-                                <button id="addBtn"
-                                    class="ff-noto fw-600 text36-lg lh-39 color-black ps-4 pe-4 mb-0">+</button>
+                                <p>
+                                <p id="addBtn"
+                                    class="ff-noto fw-600 text36-lg lh-39 color-black ps-4 pe-4 mb-0 bg-transparent cursor-pointer">+</p>
                             </div>
                         </div>
                         <div class="black">
