shadow on headings

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     <!-- ===============Minting============= -->
     <section id="minting" class="py_90 bottom_border">
         <div class="my-container">
-            <h2 class="ff-noto fw-400 text80-2xl lh-83 color-black">Minting</h2>
+            <h2 class="ff-noto fw-400 text80-2xl lh-83 color-black heading_shadaw">Minting</h2>
         </div>
     </section>
     <section class="bottom_border">
@@ -403,7 +403,7 @@
     <!--==============roadmap===============-->
     <section id="roadmap" class="py_90 bottom_border">
         <div class="my-container">
-            <h2 class="ff-noto fw-400 text80-2xl lh-83 color-black">RoadMap</h2>
+            <h2 class="ff-noto fw-400 text80-2xl lh-83 color-black heading_shadaw">RoadMap</h2>
         </div>
     </section>
     <section class="py_90 bottom_border">
@@ -509,7 +509,7 @@
     <section id="team" class="py_90 bottom_border">
         <div class="my-container">
             <div class="d-flex justify-content-between">
-                <h3 class="ff-noto fw-400 text80-2xl lh-83 color-black">Team</h3>
+                <h3 class="ff-noto fw-400 text80-2xl lh-83 color-black heading_shadaw">Team</h3>
                 <div class="d-md-flex gap-55 d-none">
                     <img class="prev2 d-flex cursor_pointer" src=" ./assets/images/svg/tweets_prev.svg"
                         alt="tweets_prev">
@@ -573,7 +573,7 @@
     <!-- ==============FAQ-ACCORDION============= -->
     <section id="faq" class="py_90 bottom_border">
         <div class="my-container">
-            <h2 class="ff-noto fw-400 text80-2xl lh-83 color-black">FAQs</h2>
+            <h2 class="ff-noto fw-400 text80-2xl lh-83 color-black heading_shadaw">FAQs</h2>
         </div>
     </section>
     <section class="bottom_border">
