--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                         </div>
                         <p class="ff-noto fw-600 text18-sm lh-25 color-green mb-0">Time Left</p>
                         <div class="">
-                            <p id="clock" class="ff-noto fw-600 text36-lg lh-49 color-red timedata">40:15:12:10</p>
+                            <p id="clock" class="ff-noto fw-600 text36-lg lh-49 color-red timedata left">40:15:12:10</p>
                         </div>
                     </div>
                 </div>
